--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <div id="tourable">
-            
-        </div>
+        <style>
+            html, body{
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                overflow: hidden;
+            }
+        </style>
+        <div id="tourable"> </div>
         <script src="/static/main.js"></script>
     </body>
     
