--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 height: 100%;
                 margin: 0;
                 overflow: hidden;
+                background-color: black;
             }
         </style>
         <div id="tourable"> </div>
